crates/cockpitctl-domain-trend/tests/snapshots/snapshot_tests__degrading_report.snap
---
source: crates/cockpitctl-domain-trend/tests/snapshot_tests.rs
expression: trend
---
{
  "verdict_change": {
    "before": "pass",
    "after": "fail"
  },
  "count_deltas": {
    "info_delta": 0,
    "warn_delta": 0,
    "error_delta": 2
  },
  "new_findings": [
    {
      "sensor_id": "lint",
      "code": "E001",
      "message": "E001 message",
      "path": "src/a.rs",
      "line": 10,
      "fingerprint": "fp1",
      "severity": "error"
    },
    {
      "sensor_id": "lint",
      "code": "E002",
      "message": "E002 message",
      "path": "src/b.rs",
      "line": 20,
      "fingerprint": "fp2",
      "severity": "error"
    }
  ],
  "fixed_findings": [],
  "sensors_added": [],
  "sensors_removed": []
}
