crates/cockpitctl-domain-trend/tests/snapshots/snapshot_tests__improving_report.snap
---
source: crates/cockpitctl-domain-trend/tests/snapshot_tests.rs
expression: trend
---
{
  "verdict_change": {
    "before": "fail",
    "after": "pass"
  },
  "count_deltas": {
    "info_delta": 0,
    "warn_delta": -1,
    "error_delta": -2
  },
  "new_findings": [],
  "fixed_findings": [
    {
      "sensor_id": "lint",
      "code": "E001",
      "message": "E001 message",
      "path": "src/a.rs",
      "line": 10,
      "fingerprint": "fp1",
      "severity": "error"
    },
    {
      "sensor_id": "lint",
      "code": "E002",
      "message": "E002 message",
      "path": "src/b.rs",
      "line": 20,
      "fingerprint": "fp2",
      "severity": "error"
    },
    {
      "sensor_id": "lint",
      "code": "W001",
      "message": "W001 message",
      "path": "src/c.rs",
      "line": 30,
      "fingerprint": "fp3",
      "severity": "warn"
    }
  ],
  "sensors_added": [],
  "sensors_removed": []
}
